# kruuvi

./: CMakeLists.txt  README.md
kruuvilib/: CMakeLists.txt
kruuvilib/src/: measurementdatabase.cpp  measurementdatabase.h  sqlitedatabase.cpp  sqlitedatabase.h
logreader/src/: main.cpp  ruuvireader.cpp  ruuvireader.h
monitorapplet/: metadata.json
monitorapplet/contents/config/: ConfigGeneral.qml  config.qml  main.xml
monitorapplet/contents/ui/: CompactRepresentation.qml  DimensionalValue.qml  FullRepresentation.qml  MeteoCanvas.qml  MeteoDisplay.qml  main.qml  utils.js
src/: dbreader.cpp  dbreader.h  plasma-dataengine-ruuvimonitor.json  plasmoidplugin.cpp  plasmoidplugin.h  qmldir  ruuvimonitor.cpp  ruuvimonitor.h
